--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -15,7 +15,7 @@
       <a class="sidebar-nav-item {% if page.url == node.url %} active{% endif %}" href="{{ '/peer_support' | prepend: site.baseurl }}">Peer Support</a>
       <a class="sidebar-nav-item {% if page.url == node.url %} active{% endif %}" href="{{ '/motivational_interviewing' | prepend: site.baseurl }}">Motivational Interviewing</a>
       <a class="sidebar-nav-item {% if page.url == node.url %} active{% endif %}" href="{{ '/motivation' | prepend: site.baseurl }}">Project Motivation</a>
-      <a class="sidebar-nav-item {% if page.url == node.url %} active{% endif %}" href="{{ '/descriptives' | prepend: site.baseurl }}">Descriptives</a>
+      <a class="sidebar-nav-item {% if page.url == node.url %} active{% endif %}" href="{{ '/descriptives' | prepend: site.baseurl }}">Data Descriptives</a>
       <a class="sidebar-nav-item {% if page.url == node.url %} active{% endif %}" href="{{ '/methods_and_processes' | prepend: site.baseurl }}">Methods & Processes</a>
       <a class="sidebar-nav-item {% if page.url == node.url %} active{% endif %}" href="{{ '/analyses_and_conclusions' | prepend: site.baseurl }}">Analyses & Conclusions</a>
       <a class="sidebar-nav-item {% if page.url == node.url %} active{% endif %}" href="{{ '/limitations_and_concerns' | prepend: site.baseurl }}">Limitations & Concerns</a>
