--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -61,10 +61,12 @@ html {
 }
 @media (min-width: 48em) {
   .sidebar {
-/*    position: fixed; */
+/*    KM removed position: fixed; */
     top: 0;
     left: 0;
     bottom: 0;
+    /*KM added float*/
+    float: left;
     width: 18rem;
     text-align: left;
   }
