--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -61,16 +61,13 @@ html {
 }
 @media (min-width: 48em) {
   .sidebar {
-    /* KM removed position: fixed; */
     position:fixed;
     top: 0;
     left: 0;
     bottom: 0;
-    /*KM added float*/
-    /*float: left;*/
     width: 18rem;
     text-align: left;
-    overflow-y: scroll
+    overflow-y: scroll;
   }
 }
 
@@ -84,7 +81,8 @@ html {
   color: #fff;
   margin-top: 0;
   font-family: "PT Sans", Helvetica, Arial, sans-serif;
-  font-size: 3.25rem;
+  /*KM Changed font-size from 3.25 to 2.25*/
+  font-size: 2.25rem;
 }
 
 /* Sidebar nav */
